prevented overflow anchoring, this way users can unmark achievements without the div scrolling to the new position of the unmarked achievement

--- a/client/src/pages/category.css
+++ b/client/src/pages/category.css
@@ -147,6 +147,7 @@ height: 100%;
     width: 98%;
     height: 98%;
     overflow-y: scroll;
+    overflow-anchor: none;
 }
 
 
